# DeepScholar

./: .env.example  .gitignore  BUILD_NOTES.md  README.md  README_CN.md  academic_agent_design.md  config.py  main.py  mcp传入llm流程.md  pyproject.toml  web.py
agent/: context_manager.py  loop.py  state_machine.py
agent/prompts/: base_system.md  phase_01_survey.md  phase_02_literature.md  phase_03_arguments.md  phase_04_innovation.md  phase_05_experiment.md  phase_06_analysis.md  phase_07_writing.md
bus/: compressor.py  jsonl_bus.py
mcp_servers/: client.py  servers.yaml
